Bug 204080 - It crashed when it was closing
Summary: It crashed when it was closing
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Showfoto-Workflow (other bugs)
Version First Reported In: 0.10.0
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-16 21:42 UTC by michal
Modified: 2022-02-04 22:40 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description michal 2009-08-16 21:42:03 UTC
Application that crashed: showfoto
Version of the application: 0.10.0
KDE Version: 4.3.00 (KDE 4.3.0)
Qt Version: 4.5.2
Operating System: Linux 2.6.30 i686

 -- Backtrace:
Application: showFoto (showfoto), signal: Segmentation fault
[Current thread is 1 (Thread 0xb47ac700 (LWP 2647))]

Thread 2 (Thread 0xb24ffb70 (LWP 2649)):
[KCrash Handler]
#6  0xb7267e97 in QString::operator=(QString const&) () from /usr/lib/libQtCore.so.4
#7  0xb7e871b0 in Digikam::ThumbnailCreator::load (this=0xb2506080, path=@0xae4dbd2c) at /usr/src/debug/digikam-0.10.0/libs/threadimageio/thumbnailcreator.cpp:264
#8  0xb7e8cc13 in Digikam::ThumbnailLoadingTask::execute (this=0xae4dbd20) at /usr/src/debug/digikam-0.10.0/libs/threadimageio/thumbnailtask.cpp:135
#9  0xb7e70918 in Digikam::LoadSaveThread::run (this=0xb2505410) at /usr/src/debug/digikam-0.10.0/libs/threadimageio/loadsavethread.cpp:134
#10 0xb7226340 in ?? () from /usr/lib/libQtCore.so.4
#11 0xb61fe4ea in start_thread (arg=0x0) at pthread_create.c:297
#12 0xb61fe405 in __free_tcb (pd=<value optimized out>) at pthread_create.c:216
#13 0x00000000 in ?? ()

Thread 1 (Thread 0xb47ac700 (LWP 2647)):
#0  0xb8010424 in __kernel_vsyscall ()
#1  0xb62027c5 in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S:122
#2  0xb6734b43 in __pthread_cond_wait (cond=0xb2505d58, mutex=0xb2505d40) at forward.c:139
#3  0xb7227304 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#4  0xb72263ce in QThread::wait(unsigned long) () from /usr/lib/libQtCore.so.4
#5  0xb7e70f83 in Digikam::LoadSaveThread::~LoadSaveThread (this=0xb2505410, __in_chrg=<value optimized out>, __in_chrg=<value optimized out>)
    at /usr/src/debug/digikam-0.10.0/libs/threadimageio/loadsavethread.cpp:80
#6  0xb7e750f8 in Digikam::ManagedLoadSaveThread::~ManagedLoadSaveThread (this=0xb2505410, __in_chrg=<value optimized out>, __in_chrg=<value optimized out>)
    at /usr/src/debug/digikam-0.10.0/libs/threadimageio/managedloadsavethread.cpp:69
#7  0xb7e8a533 in Digikam::ThumbnailLoadThread::~ThumbnailLoadThread (this=0xb2505410, __in_chrg=<value optimized out>, __in_chrg=<value optimized out>)
    at /usr/src/debug/digikam-0.10.0/libs/threadimageio/thumbnailloadthread.cpp:115
#8  0xb7e88401 in Digikam::<anonymous struct>::destroy(void) () at /usr/src/debug/digikam-0.10.0/libs/threadimageio/thumbnailloadthread.cpp:100
#9  0xb7e8bd1d in KCleanUpGlobalStatic::~KCleanUpGlobalStatic (this=0xb7ff9eb0, __in_chrg=<value optimized out>, __in_chrg=<value optimized out>) at /usr/include/kglobal.h:62
#10 0xb6688ffe in __run_exit_handlers (status=0, listp=0xb67af304, run_list_atexit=true) at exit.c:78
#11 0xb6689057 in *__GI_exit (status=0) at exit.c:100
#12 0xb6671aba in __libc_start_main (main=0x8072bed <main(int, char **)>, argc=2, ubp_av=0xbfb17054, init=0x807f2d1 <__libc_csu_init>, fini=0x807f2d0 <__libc_csu_fini>, 
    rtld_fini=0xb801fac6 <_dl_fini>, stack_end=0xbfb1704c) at libc-start.c:252
#13 0x080549e1 in _start () at ../sysdeps/i386/elf/start.S:119

Reported using DrKonqi
Comment 1 Marcel Wiesweg 2009-10-02 18:37:41 UTC
SVN commit 1030594 by mwiesweg:

Fix most probable cause of crash: Add cleanup handler to ShowFoto destructor.

BUG: 204080

 M  +2 -1      NEWS  
 M  +6 -0      showfoto/showfoto.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1030594
Comment 2 Marcel Wiesweg 2009-10-02 18:39:29 UTC
*** Bug 204562 has been marked as a duplicate of this bug. ***