Fix most probable cause of crash: Add cleanup handler to ShowFoto destructor.

BUG: 204080

svn path=/trunk/extragear/graphics/digikam/; revision=1030594